WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
216389
No audio output when unplugged wired headset during a call
https://bugs.webkit.org/show_bug.cgi?id=216389
Summary
No audio output when unplugged wired headset during a call
Trung Le
Reported
2020-09-10 17:39:49 PDT
In our webRTC application on iPad, if I unplug a wired headset during a call, I would not be able to hear others in the call anymore. It seems the audio output does not switch automatically from the headset to the iPad speaker.If I use a Bluetooth headset, then the audio output switches automatically to the iPad speaker and i can hear others fine. I was also be able to reproduce the same issue with other webRTC apps like Google Meet.
Attachments
Patch
(28.75 KB, patch)
2021-03-22 05:33 PDT
,
youenn fablet
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(28.74 KB, patch)
2021-03-22 06:24 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(28.78 KB, patch)
2021-03-22 07:36 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(28.83 KB, patch)
2021-03-22 08:46 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(28.61 KB, patch)
2021-03-23 03:56 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Rebasing
(28.58 KB, patch)
2021-04-02 03:11 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-09-10 23:59:10 PDT
<
rdar://problem/68692800
>
youenn fablet
Comment 2
2021-03-22 05:33:59 PDT
Created
attachment 423874
[details]
Patch
youenn fablet
Comment 3
2021-03-22 06:24:41 PDT
Created
attachment 423875
[details]
Patch
youenn fablet
Comment 4
2021-03-22 07:36:41 PDT
Created
attachment 423882
[details]
Patch
youenn fablet
Comment 5
2021-03-22 08:46:48 PDT
Created
attachment 423890
[details]
Patch
Eric Carlson
Comment 6
2021-03-22 10:36:00 PDT
Comment on
attachment 423882
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=423882&action=review
> Source/WebCore/ChangeLog:17 > + > +
Nit: two blank lines
> Source/WebCore/platform/audio/ios/MediaSessionHelperIOS.h:109 > +private:
Nit: don't need a second `private`
> Source/WebCore/platform/audio/ios/MediaSessionHelperIOS.mm:76 > +
Nit: extra blank line
youenn fablet
Comment 7
2021-03-22 12:47:34 PDT
***
Bug 223182
has been marked as a duplicate of this bug. ***
Eric Carlson
Comment 8
2021-03-22 12:58:08 PDT
Comment on
attachment 423890
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=423890&action=review
> Source/WebCore/ChangeLog:17 > + > +
Nit: two blank lines
> Source/WebCore/platform/audio/ios/MediaSessionHelperIOS.h:109 > +private:
Do we need the second `private:`?
> Source/WebCore/platform/audio/ios/MediaSessionHelperIOS.mm:76 > +
Nit: extra blank line
youenn fablet
Comment 9
2021-03-23 03:56:15 PDT
Created
attachment 424010
[details]
Patch for landing
youenn fablet
Comment 10
2021-04-02 03:11:15 PDT
Created
attachment 425003
[details]
Rebasing
EWS
Comment 11
2021-04-02 06:19:05 PDT
Committed
r275417
: <
https://commits.webkit.org/r275417
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425003
[details]
.
youenn fablet
Comment 12
2021-05-21 04:11:46 PDT
***
Bug 226075
has been marked as a duplicate of this bug. ***
youenn fablet
Comment 13
2021-11-03 10:36:45 PDT
***
Bug 209594
has been marked as a duplicate of this bug. ***
Vishvanath Eshwer
Comment 14
2021-12-02 06:15:57 PST
Is there a fix to this?
Vishvanath Eshwer
Comment 15
2021-12-02 06:16:35 PST
(In reply to Trung Le from
comment #0
)
> In our webRTC application on iPad, if I unplug a wired headset during a > call, I would not be able to hear others in the call anymore. It seems the > audio output does not switch automatically from the headset to the iPad > speaker.If I use a Bluetooth headset, then the audio output switches > automatically to the iPad speaker and i can hear others fine. > I was also be able to reproduce the same issue with other webRTC apps like > Google Meet.
Did you find a solution to this?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug